docs/original_moodle/unidades/entregas/todas/2/Tarea 8 - Calculadora de Horas/SIMARRA-1151896 NEIDER JOAN 2581/2019-09-22-22-18-24.ceg/compilation.txt
Hora.java:166: error: cannot find symbol
    if(Hora==other) igual=true;
       ^
  symbol:   variable Hora
  location: class Hora
1 error
Not compiled
